--- a/src/components/List.css
+++ b/src/components/List.css
@@ -48,22 +48,28 @@ textarea {
   position: fixed;
   top: 0;
   left: 0;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
   width: 100vw;
-  color: var(--white);
-  z-index: 200;
-  background-color: var(--black);
-
-  opacity: 0.8;
   overflow: hidden;
 }
+
+/* CSS specific to iOS devices */
+/* @supports (-webkit-touch-callout: none) {
+  .backdrop-alert {
+    height: 90vh;
+  }
+} */
 
 .alert-container {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: 95vh;
+  padding: 8px 0;
+  min-height: 50%;
+  max-height: 90%;
   width: 95vw;
   display: flex;
   flex-direction: column;
@@ -76,8 +82,8 @@ textarea {
 }
 
 .alert-clipboard {
-  max-height: 70%;
-  margin: 0 8px;
+  /* max-height: 50%; */
+  margin: 8px 8px;
   padding: 8px 16px;
   border: solid 2px black;
   border-radius: 8px;
@@ -90,7 +96,7 @@ textarea {
   }
 
   .alert-container {
-    height: 80vh;
+    max-height: 80%;
     max-width: 80%;
   }
 }
