--- a/src/components/shared/Backdrop.css
+++ b/src/components/shared/Backdrop.css
@@ -1,9 +1,4 @@
-.backdrop-sidebar {
-  position: fixed;
-  top: 0;
-  left: 100%;
-  height: 100%;
-  width: 100vw;
+.Backdrop {
   color: var(--white);
   z-index: 200;
   background-color: var(--black);
